pkg/lang/testdata/ub/constraints/invalid/for-each-duplicate.ub
constraints: [
  {
    kind:      predicate
    @for-each: var.a
    @for-each: var.b
    when:      true
    require:   true
  },
]
